# format

./: .clang-format  CMakeLists.txt  README.md  run.sh
src/: main.cc
